test/sema/typeck/module/fct-call-nested-not-accessible.out
error: element is not accessible.
--> fct-call-nested-not-accessible.dora:1:10
 | fn f() { foo::bar::baz(); }
            ~~~~~~~~~~~~~~~
 | mod foo {
 |     pub mod bar {
1 error found.
