test/sema/typeck/module/fct-call-nested-not-accessible.dora
fn f() { foo::bar::baz(); }
mod foo {
    pub mod bar {
        fn baz() {}
    }
}
